# Geospatial-QA-Pipeline

./: .gitignore  README.md  instruction_geospatial_qa_pipeline_DETAILED (1).txt  pyproject.toml  requirements.txt  sample_layers.csv
config/: layers.csv
geo_qa/: __init__.py  __main__.py  arcgis.py  cli.py  logging_config.py  models.py  report.py  rules.py  utils.py  web.py
tests/: __init__.py  test_arcgis_client.py  test_rules_unit.py
tests/fixtures/: metadata_example.json
